--- a/recipe-final/css/styles.css
+++ b/recipe-final/css/styles.css
@@ -1,5 +1,5 @@
 body{
-	width: 380px;
+	width: 400px;
 	margin: 0;
 	padding: 0;
 	line-height: 22px;
@@ -48,7 +48,7 @@ section{
 	background-color: #cf1b11;
 }
 #maininfo div{
-	width: 92px;
+	width: 113px;
 	text-align: center;
 	display: inline-block;
 	font-weight: bold;
@@ -84,9 +84,9 @@ section{
 
 .step{
 	display: inline-block;
-	max-width: 268px;
+	width: 317px;
 	margin-top: 4px;
-	margin-bottom: 14px;
+	margin-bottom: 15px;
 }
 .inline{
 	display: inline-block;
@@ -106,9 +106,9 @@ section{
 	line-height: 1.5em;
 }
 img{
-	width: 310px;
+	width: 360px;
 	height: 200px;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 }
 .small{
 	width: 150px;
@@ -117,11 +117,18 @@ img{
 	margin-top: 10px;
 }
 iframe{
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 }
 .space{
 	margin-top: 10px;
 }
-a{
+footer{
 	color: #cf1b11;
+}
+#step1{
+	margin-top: 9px;
+	margin-bottom: -5px;
+}
+p{
+	margin-top: -5px;
 }
