--- a/recipe-final/css/styles.css
+++ b/recipe-final/css/styles.css
@@ -1,10 +1,10 @@
 body{
-	width: 450px;
+	width: 420px;
 	margin: 0;
 	padding: 0;
 	line-height: 22px;
 	font-family: Montserrat, sans-serif;
-	/*border: 1px solid black;*/
+	border: 1px solid black;
 	/*font-size: 20px;*/
 }
 
@@ -15,10 +15,10 @@ body{
 }
 
 h1{
-	font-size: 64px;
+	font-size: 72px;
 	line-height: 110px;
-	margin-top: -5px;
-	margin-bottom: -6px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 	font-family: Montserrat, sans-serif;
 	font-weight: bold;
 }
@@ -48,7 +48,7 @@ section{
 	background-color: #cf1b11;
 }
 #maininfo div{
-	width: 113px;
+	width: 123px;
 	text-align: center;
 	display: inline-block;
 	font-weight: bold;
@@ -84,7 +84,7 @@ section{
 
 .step{
 	display: inline-block;
-	width: 317px;
+	width: 330px;
 	margin-top: 4px;
 	margin-bottom: 15px;
 }
@@ -106,12 +106,12 @@ section{
 	line-height: 1.5em;
 }
 img{
-	width: 360px;
+	width: 410px;
 	height: 200px;
 	margin-bottom: 15px;
 }
 .small{
-	width: 150px;
+	width: 200px;
 	height: 150px;
 	display: inline-block;
 	margin-top: 10px;
