--- a/recipe-final/css/styles.css
+++ b/recipe-final/css/styles.css
@@ -2,9 +2,9 @@ body{
 	width: 410px;
 	margin: 0;
 	padding: 0;
-	line-height: 22px;
+	line-height: 23px;
 	font-family: Montserrat, sans-serif;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	/*font-size: 20px;*/
 }
 
