--- a/microsite/finished/css/dropbar.css
+++ b/microsite/finished/css/dropbar.css
@@ -1,57 +1,70 @@
-#drawer {
-	position: absolute;
-	top: 30px;
-	right: 6%;
-	width: 200px;
-	height: 60px;
-	font-size: 20pt;
-	text-align: center;
-}
-#drawer button.controls {
-	position: absolute;
-	background-color: white;
-	right: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	border: none;
-	cursor: pointer;
-}
-#drawer.open button.controls {
-	/*background-color: white;*/
-}
-#drawer button.controls:after {
-	content: "2017";
-	font-family: IvyMode, serif;
-	border: none;
-	background-color: white;			
-	font-size: 18pt;
-}
-#drawer .contents {
-	height: 0px;
-	box-sizing: border-box;
-	text-align: center;
-	width: 100%;
-	color: black;
-	background-color: white;
-	transition: all .4s;
-	border: 1px solid grey;
-	opacity: 100%;
-	z-index: 10;
-}
-#drawer.open .contents {
-	height: 180px;
-	padding: 60px 10px 10px 10px;
-	opacity: 100%;
-}
-#drawer.open button.controls {
-	position: absolute;
-	right: 0;
-	top: 10px;
-	padding-bottom: 180px;
-	opacity: 0%;
-	height: 100%;
-	width: 100%;
-	border: none;
-	cursor: pointer;
-}
+			#drawer {
+				position: absolute;
+				top: 80px;
+				right: 20px;
+				width: 150px;
+				height: 30px;
+			}
+
+			#drawer button.controls {
+				position: absolute;
+				right: 0;
+				bottom: 0;
+				height: 110px;
+				width: 100%;
+				background-color: white;
+				border:none;
+				cursor: pointer;
+				z-index: 10;
+			}
+
+			#drawer button:hover{
+				color: #f0d316;
+			}
+
+			#drawer button.controls:after {
+				content: "MENU";
+				font-family: IvyMode, serif;
+				font-size: 20pt;
+			}
+
+			#drawer.open button.controls:after {
+				content: "MENU";
+			}
+
+			#drawer.open button{
+				border:none;
+			}
+
+			#drawer .contents {
+				height: 0;
+				position: relative;
+				top: -400px;
+				padding: 0 10px;
+				box-sizing: border-box;
+				width: 100%;
+				background-color: white;
+				font-family: IvyMode, serif;
+				font-size: 20pt;
+				transition: all .5s;
+				text-align: center;
+			}
+			#drawer .contents a{
+					color: black;
+				text-decoration: none;
+				padding: 5px;
+			}
+			#drawer.open .contents a{
+				color: black;
+				text-decoration: none;
+				padding: 5px;
+
+			}
+			#drawer.open .contents a:hover{
+				color: #f0d316;
+			}
+			#drawer.open .contents {
+				top: 30pt;
+				height: 200px;
+				/*padding: 30px 10px 10px 10px;*/
+			}
