--- a/microsite/finished/css/gallery.css
+++ b/microsite/finished/css/gallery.css
@@ -213,3 +213,10 @@ ul.pgwSlider.narrow.listOnTheLeft > li,
     padding: 15px 12px 15px 15px;
     top: 40%;
 }
+
+@media screen and (max-width: 900px){
+    
+    #gallery{
+        padding-bottom: 115%;
+    }
+}
